--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^6.2.9",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
     "pdf-creator-node": "^2.3.4",
     "sharp": "^0.30.6"
